--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2376,19 +2376,19 @@
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button, you can see Action flows, eWorker machines, Queues, Schedules, and Secret Vault in the left menu.</p>
                                <p>3. Action flows tab shows the list of action flows published to the eManager console.</p>
-                               <img src="{{ '/assets/images/doc-img49.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Business Process tab </strong></p>
+                               <img src="{{ '/assets/images/doc-img58.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: Action Flow tab </strong></p>
                                <p>4. eWorker machine tab lists the machines registered with the eManager console. It contains the required runtime to execute the action flows that are published to eManager console.</p>
-                               <img src="{{ '/assets/images/doc-img50.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                               <p style="text-align:center;"><strong>Figure: Workers tab </strong></p>
+                               <img src="{{ '/assets/images/doc-img81.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure: eWorkers Machine tab </strong></p>
                                <p>5. Queues shows the current and pending tasks waiting for the execution in the eWorker machine.</p>
-                               <img src="{{ '/assets/images/doc-img51.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                                 <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
+                               <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <p style="text-align:center;"><strong>Figure:  Queues</strong></p>
                                <p>6. Schedules functionality is, to schedule/execute action flows repetitively on a timely basis, like Minutes, Hourly, Daily, Weekly, Monthly or Advanced,</p>
                                <img src="{{ '/assets/images/doc-img52.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Schedules </strong></p>
                                <p>7.	Secret Vault is used to store sensitive information such as credentials, tokens, keys etc. It supports different types of assets like Text, Boolean, Integer, and Credentials.</p>
-                               <img src="{{ '/assets/images/doc-img53.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img67.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Secret Vault </strong></p>
                            </div>
 
