--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -580,7 +580,7 @@
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#Un-installInstructions"> Un-install Instructions</a></li>
                                               </ul>
                                           </li>
-                                          <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic eWorker</a></li>
+                                          <li><a class="child 2" href="#Building"><span class="numbers"></span> Building a basic Action Flow</a></li>
                                           <li id="MenuOptions"><a id="menuoptions-expand" class="child 2" href="#Menu"><span class="numbers"></span> Menu Options</a>
                                               <ul id="menuoptions-ul">
                                                 <li style="margin-left:20px;"><a class="child 2" href="#New"><span class="numbers"></span> <span style="margin-left:5px;">New</span></a></li>
