--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1775,7 +1775,7 @@
                       </div>
 
                       <div id="GetRow"  class="page-section">
-                        <h5 class="purple"> Get Row.</h5>
+                        <h5 class="purple"> Get Row</h5>
                         <p>Reads the values from a row beginning with the cell specified in the Starting Cell field and stores it in a list variable.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet being used. This option is shown only when taking the Delete Column action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1785,7 +1785,7 @@
                       </div>
 
                       <div id="DeleteRow"  class="page-section">
-                        <h5 class="purple"> Delete Row.</h5>
+                        <h5 class="purple"> Delete Row</h5>
                         <p>Remove a specified row at a certain position.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Delete Row action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1794,7 +1794,7 @@
                       </div>
 
                       <div id="GetCell"  class="page-section">
-                        <h5 class="purple"> Get Cell.</h5>
+                        <h5 class="purple"> Get Cell</h5>
                         <p>Reads the values from a row beginning with the cell specified in the Starting Cell field and stores it in a string variable.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Get Cell action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1806,7 +1806,7 @@
 
 
                       <div id="WriteCell"  class="page-section">
-                        <h5 class="purple"> Write Cell.</h5>
+                        <h5 class="purple"> Write Cell</h5>
                         <p>Writes a value into a specified spreadsheet cell. If the sheet does not exist, a new one is created with the Sheet Name value. If a value exists, it is overwritten. Changes are immediately saved.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet being used. This option is shown only when taking the Write Cell action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1817,7 +1817,7 @@
                       </div>
 
                       <div id="GetRange"  class="page-section">
-                        <h5 class="purple"> Get Range.</h5>
+                        <h5 class="purple"> Get Range</h5>
                         <p>Reads the value of an Excel range and stores it in a DataTable variable. If the range isn't specified, the whole spreadsheet is read. If a particular range is specified, it reads the values from that specific range only.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Get Range action directly. If dragged into the open spreadsheet activity It will not ask the path, and no need to mention the path.</p>
@@ -1828,7 +1828,7 @@
                       </div>
 
                       <div id="WriteRange"  class="page-section">
-                        <h5 class="purple"> Write Range.</h5>
+                        <h5 class="purple"> Write Range</h5>
                         <p>Writes the data from a DataTable variable in a spreadsheet starting with the cell indicated in the Starting Cell field. If the starting cell is not specified, the data is written starting from the A1 cell. If the sheet does not exist, a new sheet is created with the value specified in the Sheet Name property. All cells within the specified range are overwritten. Changes are immediately saved.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Write Range action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1839,7 +1839,7 @@
                       </div>
 
                       <div id="AppendRange"  class="page-section">
-                        <h5 class="purple"> Append Range.</h5>
+                        <h5 class="purple"> Append Range</h5>
                         <p>Adds the information stored in a DataTable variable to the end of a specified Excel spreadsheet. If the sheet does not exist, a new one is created with the name indicated in the Sheet Name field.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Append Range action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1850,7 +1850,7 @@
                       </div>
 
                       <div id="DeleteRange"  class="page-section">
-                        <h5 class="purple"> Delete Range.</h5>
+                        <h5 class="purple"> Delete Range</h5>
                         <p>Deletes a specified range in an Excel workbook.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> Enter the full path of the Excel spreadsheet. This option is shown only when taking the Delete Range action directly. If dragged into the open spreadsheet activity, it will not ask the path, and no need to mention the path.</p>
@@ -1869,7 +1869,7 @@
                       </div>
 
                       <div id="SetRangeColor"  class="page-section">
-                        <h5 class="purple"> Set Range Color.</h5>
+                        <h5 class="purple"> Set Range Color</h5>
                         <p>Changes the color of a specified cell or cell range using a Color variable.It Can only be used within the Open Spread Sheet action and outside the Open Spread Sheet Action.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Full Path:</strong> The full path of the Excel spreadsheet that you want to use. This option is shown only if you are taking the Set Range Color action directly. If you drag it into the open spreadsheet activity, it will not ask the path and no need to mention the path.</p>
@@ -1936,7 +1936,7 @@
                       </div>
 
                       <div id="TechForceOCR"  class="page-section">
-                        <h5 class="purple"> TechForce.ai OCR </h5>
+                        <h5 class="purple"> TechForce.ai OCR</h5>
                         <p>This action is used to extract the data from the inputs provided. The extracted data will be stored in a variable for further use.</p>
                         <h6>Properties</h6>
                         <p><span class="numbers">1.<strong> Indicate on-screen using location: </strong>Click on Select Location button. It opens the new window to select the location. Select the location and press Enter. Select any string variable from the drop-down to store the result of the OCR.</p>
@@ -1947,7 +1947,7 @@
                       </div>
 
                       <div id="Files"  class="page-section">
-                        <h5 class="purple">Files and Folders </h5>
+                        <h5 class="purple">Files and Folders</h5>
                       </div>
 
                       <div id="CreateFiles"  class="page-section">
@@ -2161,7 +2161,7 @@
 
               <div id="Technologies"  class="page-section">
                 <h5 class="purple">Technologies </h5>
-                <p>TechForce.ai RPA supports four programming languages. The supported languages are JavaScript, Python, R, and AutoHotkey. The user can add simple programming code snippets using this action.</p>
+                <p>TechForce.ai RPA supports three programming languages. The supported languages are JavaScript, Python, and AutoHotkey. The user can add simple programming code snippets using this action.</p>
               </div>
 
               <div id="JavaScript"  class="page-section">
@@ -2174,10 +2174,10 @@
                 <p>The user can add Python code snippet using this action.</p>
               </div>
 
-              <div id="R"  class="page-section">
+              <!-- <div id="R"  class="page-section">
                 <h5 class="purple"> R </h5>
                 <p>The user can add R code snippet using this action.</p>
-              </div>
+              </div> -->
 
               <div id="AutoHotkey"  class="page-section">
                 <h5 class="purple"> AutoHotkey</h5>
@@ -2400,12 +2400,9 @@
                              <h5>Executing a Action Flows:</h5>
                              <p>2. In the Action Flows  page, upload the RPA flow and Click on the PLAY button to execute the flow. After clicking on the play button, the following image will appear.</p>
                              <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure:  Process execution </strong></p>
+                             <p style="text-align:center;"><strong>Figure:  Action Flow execution </strong></p>
                              <p>3. Select the Execution target Type (like Reserved). If the RESERVED option is selected as the execution type, then specify the eWorker machine.</p>
-                             <img src="{{ '/assets/images/doc-img60.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: select eworker machine</strong></p>
-                             <img src="{{ '/assets/images/doc-img61.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Select the execution type </strong></p>
+
                           </div>
 
                           <div id="WorkerManagement"  class="page-section">
