--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -725,7 +725,7 @@
 
                                                    <li id="Programming" style="margin-left:10px;"><a id="programming-expand" class="child 2" href="#Programming"><span class="numbers"></span> <span style="margin-left:15px;">Programming</span></a>
                                                      <ul id="programming-ul">
-                                                      <li id="Variables" style="margin-left:10px;"><a id="variables-expand" class="child 2" href="#Variables"><span class="numbers"></span> <span style="margin-left:15px;">Variables</span></a>
+                                                      <li id="Variables2" style="margin-left:10px;"><a id="variables-expand" class="child 2" href="#Variables2"><span class="numbers"></span> <span style="margin-left:15px;">Variables</span></a>
                                                       <ul  id="variables-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#StringFormat"><span class="numbers"></span> <span style="margin-left:35px;">String Format</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#DateFormat"><span class="numbers"></span> <span style="margin-left:35px;">Date Format</span></a></li>
@@ -3025,7 +3025,7 @@ $('#variables-expand').click(function(){
 $("#variables-ul").stop().slideToggle(700);
 });
 
-$('#technologiess-expand').click(function(){
+$('#technologies-expand').click(function(){
 $("#technologies-ul").stop().slideToggle(700);
 });
 
