--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -736,7 +736,7 @@
                                                       <ul id="technologies-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#JavaScript"><span class="numbers"></span> <span style="margin-left:35px;">JavaScript</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#Python"><span class="numbers"></span> <span style="margin-left:35px;">Python</span></a></li>
-                                                      <li style="margin-left:20px;"><a class="child 2" href="#R"><span class="numbers"></span> <span style="margin-left:35px;">R</span></a></li>
+                                                      <!-- <li style="margin-left:20px;"><a class="child 2" href="#R"><span class="numbers"></span> <span style="margin-left:35px;">R</span></a></li> -->
                                                       <li style="margin-left:20px;"><a class="child 2" href="#AutoHotKey"><span class="numbers"></span> <span style="margin-left:35px;">AutoHotKey</span></a></li>
                                                       </ul>
                                                      </li>
