--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -723,16 +723,16 @@
                                                     </ul>
                                                     </li>
 
-                                                   <li id="Programming" style="margin-left:10px;"><a id="programming-expand" class="child 2" href="#Programming"><span class="numbers"></span> <span style="margin-left:15px;">Programming</span></a>
+                                                   <li id="Programming2" style="margin-left:10px;"><a id="programming-expand" class="child 2" href="#Programming"><span class="numbers"></span> <span style="margin-left:15px;">Programming</span></a>
                                                      <ul id="programming-ul">
-                                                      <li id="Variables2" style="margin-left:10px;"><a id="variables-expand" class="child 2" href="#Variables2"><span class="numbers"></span> <span style="margin-left:15px;">Variables</span></a>
+                                                      <li style="margin-left:10px;"><a id="variables-expand" class="child 2" href="#Variables2"><span class="numbers"></span> <span style="margin-left:15px;">Variables</span></a>
                                                       <ul  id="variables-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#StringFormat"><span class="numbers"></span> <span style="margin-left:35px;">String Format</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#DateFormat"><span class="numbers"></span> <span style="margin-left:35px;">Date Format</span></a></li>
                                                       </ul>
                                                       </li>
 
-                                                      <li id="Technologies" style="margin-left:10px;"><a id="technologies-expand" class="child 2" href="#Technologies"><span class="numbers"></span> <span style="margin-left:20px;">Technologies</span></a>
+                                                      <li style="margin-left:10px;"><a id="technologies-expand" class="child 2" href="#Technologies"><span class="numbers"></span> <span style="margin-left:20px;">Technologies</span></a>
                                                       <ul id="technologies-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#JavaScript"><span class="numbers"></span> <span style="margin-left:35px;">JavaScript</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#Python"><span class="numbers"></span> <span style="margin-left:35px;">Python</span></a></li>
