--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2179,7 +2179,7 @@
                 <p>The user can add R code snippet using this action.</p>
               </div> -->
 
-              <div id="AutoHotkey"  class="page-section">
+              <div id="AutoHotKey"  class="page-section">
                 <h5 class="purple"> AutoHotkey</h5>
                 <p>The user can add AutoHotkey code snippet using this action.</p>
               </div>
