--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -571,7 +571,7 @@
                                  <li class="subMenu">
                                       <a href="#TechForce"  class="heading"><span class="numbers"></span>TechForce.ai Studio Guide</a>
                                       <ul class="collapse list-unstyled collapse-2">
-                                          <li id="Installation"><a id="installation-expand" class="child 2" href="#Installation">Installation</a>
+                                          <li><a id="installation-expand" class="child 2" href="#Installation">Installation</a>
                                               <ul id="installation-ul">
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#SoftwareRequirements"> Software Requirements</span></a></li>
                                                  <li class="installation-li" style="margin-left:20px;"><a class="child 2" href="#HardwareRequirements">Hardware Requirements</span></a></li>
