--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2402,7 +2402,8 @@
                              <img src="{{ '/assets/images/doc-img59.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
                              <p style="text-align:center;"><strong>Figure:  Action Flow execution </strong></p>
                              <p>3. Select the Execution target Type (like Reserved). If the RESERVED option is selected as the execution type, then specify the eWorker machine.</p>
-
+                             <p>4. Select the eWorker Machine from the available list of added machines to execute the action flow.</p>
+                             <p>5. Select the mode of execution as Chrome, Mozilla Firefox, Microsoft Edge or Headless in the execution type list and click on submit button.</p>
                           </div>
 
                           <div id="WorkerManagement"  class="page-section">
@@ -2432,24 +2433,23 @@
                              <h5>Delete eWorker Machine</h5>
                             <p><span class="numbers">1.</span> To delete an eWorker machine created, just click on the DELETE icon which is available in the details of the machine.</p>
                             <img src="{{ '/assets/images/doc-img84.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Worker screen</strong></p>
+                             <p style="text-align:center;"><strong>Figure: Delete Registered eWorker Machine screen</strong></p>
                             <p><span class="numbers">2.</span> On the next screen, click on YES to confirm the deletion of the registered eWorker Machine.</p>
                             <img src="{{ '/assets/images/doc-img85.png' | relative_url }}"alt="image" class="topImg" style="border:1px solid green; margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                             <p style="text-align:center;"><strong>Figure: Delete  REgistered eWorker Machine screen </strong></p>
+                             <p style="text-align:center;"><strong>Figure: Registered eWorker Machine deletion confirmation screen </strong></p>
                          </div>
 
                          <div id="Queues"  class="page-section">
                            <h4 class="skyBlue"> Queues</h4>
                            <p>The status of currently executing eWorker machines and scheduled flows can be seen from the Queues screen.</p>
                             <img src="{{ '/assets/images/doc-img64.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Queues screen </strong></p>
+                            <p style="text-align:center;"><strong>Figure: Queues screen </strong></p>
                             <p>Select the eWorker machine  to check the action flows to be executed in the selected environment.</p>
                             <img src="{{ '/assets/images/doc-img65.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Select eWorker machine</strong></p>
+                            <p style="text-align:center;"><strong>Figure: Select eWorker machine</strong></p>
                             <p>After selecting the eWorker machine, you can see the action flows to be executed. </p>
                             <img src="{{ '/assets/images/doc-img66.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
-                              <p style="text-align:center;"><strong>Figure: Action Flows status</strong></p>
-                            <p> On-premise the Worker List is called as “Queues”</p>
+                            <p style="text-align:center;"><strong>Figure: Action Flows status</strong></p>
                         </div>
 
                         <div id="SecretVault"  class="page-section">
