--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -792,7 +792,7 @@
                                                </ul>
                                           </li>
                                           <li><a class="child  4" href="#Registeringworker">Registering eWorker Machine with EM console</a></li>
-                                          <li><a class="child  4" href="#TriggeringBots">Triggering Bots</a></li>
+                                          <li><a class="child  4" href="#TriggeringBots">Triggering Action Flows</a></li>
 
                                       </ul>
                                   </li>
@@ -2617,27 +2617,27 @@
                          </div>
 
                          <div id="Registeringworker"  class="page-section">
-                             <h4 class="purple"><span class="numbers"></span> Registering eWorker Machine with EM console</h4>
+                             <h4 class="purple"><span class="numbers"></span> Registering eWorker Machine with eManager console</h4>
                           <a href="javascript: scrollToForm4();">Refer eWorker machine creation from WorkerManagement</a>
                           </div>
 
                          <div id="TriggeringBots"  class="page-section">
-                             <h4 class="purple"><span class="numbers"></span> Triggering eWorkers</h4>
-                             <p><span class="numbers">1.</span>	To trigger an action flow, log into TechForce.ai studio and go to the Business Process screen. </p>
-                             <p><span class="numbers">2.</span>	Business Processes page lists the action flows that are published to the eManager console.</p>
+                             <h4 class="purple"><span class="numbers"></span> Triggering Action Flows</h4>
+                             <p><span class="numbers">1.</span>	To trigger an action flow, log in to TechForce.ai eManager Console and go to the Action Flows screen. </p>
+                             <p><span class="numbers">2.</span>	Action Flows page lists the action flows that are published to the eManager console.</p>
                              <p><span class="numbers">3.</span>	To publish an action flow to the eManager console, first zip the action flow folder. Click on the UPLOAD button on the top right corner of the page, browse the zip file, and click the UPLOAD button. The action flow will be uploaded.</p>
                              <p><span class="numbers">4.</span> After uploading, execute the flow by clicking on the PLAY button.</p>
-                             <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the Worker in which the flow should get executed and click on the submit button.</p>
+                             <p><span class="numbers">5.</span>	Select the Execution target type as Reserved, select the eWorker Machine in which the flow should get executed, select the execution type and click on the submit button.</p>
                              <p><span class="numbers">6.</span>	eManager console automatically maintains versioning for the published action flows. Click on the number below versions to see the default version of the action flow. The default version of a published action flow is 1.0. If you publish the action flow again with some changes, the latest one is marked as the default one. You can switch back the older version of action flow at any point in time by simply selecting the required version.</p>
-                             <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the business processes. you can also see the live logs of an instance while the execution is in progress.</p>
+                             <p><span class="numbers">7.</span> You can see the logs of an executed action flow under the instances of the Action Flows. you can also see the live logs of an instance while the execution is in progress.</p>
                              <p><span class="numbers">8.</span>	Schedules functionality is, to schedule/execute action flows repetitively on a timely basis.</p>
                              <p><span class="numbers">9.</span> To create a Schedule, navigate to the SCHEDULES page, and click on the CREATE button. </p>
-                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the execution type, worker machine, and time zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly or Advanced. Also, specify when to stop the eWorker. </p>
-                             <p><span class="numbers">11.</span> If selected Minutes, then the business process executes at specified intervals in minutes.</p>
-                             <p><span class="numbers">12.</span> If the Hourly option is selected, then the process executes at specified intervals of hours and minutes.</p>
-                             <p><span class="numbers">13.</span> If the Daily option is selected, then the process executes every day at the specified time considering hours and minutes.</p>
-                             <p><span class="numbers">14.</span> In the case of the weekly option, the process executes on the selected weekdays at specified hours and minutes.</p>
-                             <p><span class="numbers">15.</span> If the monthly option is selected, then the process executes based on the selected month, selected weekdays, specified hours, and minutes.</p>
+                             <p><span class="numbers">10.</span> Provide a name to the schedule.  Choose the “Action Flow” that needs to be scheduled. Choose the Browser Option , eWorker Machine, and Time Zone. Then specify the time intervals to execute the action flow like Minutes, Hourly, Daily, Weekly, Monthly or Advanced. Also, specify when to stop the Schedule. </p>
+                             <p><span class="numbers">11.</span> If selected Minutes, then the Action Flow executes at specified intervals in minutes.</p>
+                             <p><span class="numbers">12.</span> If the Hourly option is selected, then the flow executes at specified intervals of hours and minutes.</p>
+                             <p><span class="numbers">13.</span> If the Daily option is selected, then the flow executes every day at the specified time considering hours and minutes.</p>
+                             <p><span class="numbers">14.</span> In the case of the weekly option, the flow executes on the selected weekdays at specified hours and minutes.</p>
+                             <p><span class="numbers">15.</span> If the monthly option is selected, then the flow executes based on the selected month, selected weekdays, specified hours, and minutes.</p>
                              <p><span class="numbers">16.</span> If the Advanced option is selected, you can write your custom schedule.</p>
                              <p><span class="numbers">17.</span> Specify the stop time to stop the schedule after a certain amount of time. Just enable the stop schedule button and enter the date and time to stop the schedule.</p>
                          </div>
@@ -2651,7 +2651,7 @@
                             <h5>Stage</h5>
                             <p><span class="numbers">1.</span> Stages have a simple linear representation that flows from top to bottom, when activities follow each other. For example, they are useful in UI automation, when navigation and typing happens one click/keystroke at a time.</p>
                             <h5>Choices</h5>
-                            <p><span class="numbers">1.</span>  Decisions need to be implemented in a workflow to enable the eWorker to react differently in various conditions in data processing and application interaction. Picking the most appropriate representation of a condition and its subsequent branches has a big impact on the visual structure and readability of a workflow</p>
+                            <p><span class="numbers">1.</span> Decisions need to be implemented in a Action Flow to enable the flow to react differently in various conditions in data processing and application interaction. Picking the most appropriate representation of a condition and its subsequent branches has a big impact on the visual structure and readability of a Action Flow.</p>
                             <h5>If Activity</h5>
                             <p><span class="numbers">1.</span>  The IF activity splits a stage vertically and is perfect for short balanced linear branches. Challenges come when more conditions need to be chained in an IF… ELSE IF manner, especially when branches exceed available screen size in either width or height.</p>
                             <h5>Data</h5>
@@ -2763,19 +2763,19 @@
                             <p><span class="numbers">1.</span> Make sure that you store your sensitive data in the secret vault and access the data using these actions. </p>
 
                             <h5>Benefits of TechForce.ai Studio Upgraded version </h5>
-                            <p>1.	Maintaining the logs of Business Processes.</p>
-                            <p>2.	Scheduling the process.</p>
-                            <p>3.	Workers to select the run environment to execute the processes.</p>
+                            <p>1.	Maintaining the logs of Action Flows.</p>
+                            <p>2.	Scheduling the flows.</p>
+                            <p>3.	eWorker Machines to select the run environment to execute the flows.</p>
                             <p>4.	Queues</p>
                             <p>5. Secret Vault</p>
                             <p>6.	Restricted user hierarchy</p>
-                            <p>7.	eWorkers can be executed either in Attended or Unattended mode on the selected worker environment.</p>
+                            <p>7.	Action Flows can be executed either in Attended or Unattended mode on the selected eWorker Machine environment.</p>
                           </div>
 
 
 
                           <div id="Architecture" class="page-section">
-                            <h3><span class="numbers">7.  </span> Architecture & Deployment Models</h3>
+                            <h3><span class="numbers"> </span> Architecture & Deployment Models</h3>
 
                           </div>
 
