--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -802,7 +802,7 @@
                                 </li>
 
                                    <li>
-                                      <a href="Architecture" class="heading"><span class="numbers"></span> Architecture & Deployment Models </a>
+                                      <a href="#Architecture" class="heading"><span class="numbers"></span> Architecture & Deployment Models </a>
                                       <ul class="collapse list-unstyled collapse-5">
                                          <li><a class="child 5" href="#SaaSModel">SaaS Model</a></li>
                                          <li><a class="child 5" href="#HybridModel">Hybrid Model</a></li>
