--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -597,7 +597,7 @@
                                             <li id="ActionLibrary"><a id="actionlibrary-expand" class="child 2" href="#Action"><span class="numbers"></span> Action Library</a>
                                               <ul id="actionlibrary-ul">
                                                 <li style="margin-left:10px;"><a class="child 2" href="#Stage"><span class="numbers"></span> <span style="margin-left:5px;">Stage</span></a></li>
-                                                        <li id="DesktopAutomation" style="margin-left:10px;"><a id="desktopautomation-expand" class="child 2" href="#DesktopAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Desktop Automation</span></a>
+                                                        <li id="Desktop" style="margin-left:10px;"><a id="desktopautomation-expand" class="child 2" href="#DesktopAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Desktop Automation</span></a>
                                                         <ul id="desktopautomation-ul">
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Keyboard"><span class="numbers"></span> <span style="margin-left:15px;">Keyboard Shortcuts</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Drag"><span class="numbers"></span> <span style="margin-left:15px;">Drag and Drop</span></a></li>
@@ -2791,7 +2791,7 @@
 
                           </div>
                           <div id="OnPremise" class="page-section">
-                            <h4><span class="numbers"></span> On-Premise</h4>
+                            <h4><span class="numbers"></span> On-Premise Model</h4>
                               <img src="{{ '/assets/images/doc-img89.png' | relative_url }}"alt="image" class="topImg" style="margin-left:20px;margin-top:10px;margin-bottom:10px;">
                           </div>
 
