--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -608,7 +608,7 @@
                                                         <li style="margin-left:20px;"><a class="child 2" href="#Screenshot"><span class="numbers"></span> <span style="margin-left:15px;">Screenshot</span></a></li>
                                                         </ul></li>
 
-                                                        <li id="WebAutomation"style="margin-left:10px;"><a id="webautomation-expand" class="child 2" href="#WebAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Web Automation</span></a>
+                                                        <li id="WebA"style="margin-left:10px;"><a id="webautomation-expand" class="child 2" href="#WebAutomation"><span class="numbers"></span> <span style="margin-left:5px;">Web Automation</span></a>
                                                         <ul id="webautomation-ul">
                                                         <li style="margin-left:20px;"><a class="child 2" href="#OpenWebpage"><span class="numbers"></span> <span style="margin-left:15px;">Open Webpage</span></a></li>
                                                         <li style="margin-left:20px;"><a class="child 2" href="#ReadTable"><span class="numbers"></span> <span style="margin-left:15px;">Read Table</span></a></li>
