--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -654,18 +654,18 @@
                                                     </ul>
                                                     </li>
 
-                                                    <li id="ConditionalActions" style="margin-left:20px;"><a id="conditionalactions-expand" class="child 2" href="#ConditionalActions">Conditional Actions</a>
+                                                    <li id="Conditional" style="margin-left:20px;"><a id="conditionalactions-expand" class="child 2" href="#ConditionalActions">Conditional Actions</a>
                                                     <ul id="conditionalactions-ul">
                                                     <li style="margin-left:20px;"><a class="child 2" href="#If"><span class="numbers"></span> <span style="margin-left:35px;">If,IfElse,Elseif</span></a></li>
                                                     </ul></li>
 
-                                                    <li id="ExceptionHandling" style="margin-left:10px;"><a  id="exceptionhandling-expand" class="child 2" href="#ExceptionHandling"><span class="numbers"></span> <span style="margin-left:25px;">Exception Handling</span></a>
+                                                    <li id="Exception" style="margin-left:10px;"><a  id="exceptionhandling-expand" class="child 2" href="#ExceptionHandling"><span class="numbers"></span> <span style="margin-left:25px;">Exception Handling</span></a>
                                                        <ul  id="exceptionhandling-ul">
                                                          <li style="margin-left:20px;"><a class="child 2" href="#TryCatch"><span class="numbers"></span> <span style="margin-left:35px;">Try Catch:</span></a></li>
                                                        </ul>
                                                     </li>
 
-                                                      <li id="ExcelActions" style="margin-left:10px;"><a id="excelactions-expand" class="child 2" href="#ExcelActions"><span class="numbers"></span> <span style="margin-left:25px;">Excel Actions</span></a>
+                                                      <li id="Excel" style="margin-left:10px;"><a id="excelactions-expand" class="child 2" href="#ExcelActions"><span class="numbers"></span> <span style="margin-left:25px;">Excel Actions</span></a>
                                                       <ul id="excelactions-ul">
                                                       <li style="margin-left:20px;"><a class="child 2" href="#OpenSpreadsheet"><span class="numbers"></span> <span style="margin-left:35px;">Open Spreadsheet</span></a></li>
                                                       <li style="margin-left:20px;"><a class="child 2" href="#GetSheetNames"><span class="numbers"></span> <span style="margin-left:35px;">Get Sheetnames</span></a></li>
